[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/FSMSecurityTrooper/FSMSecurityTrooper.gd" type="Script" id=1]
[ext_resource path="res://Assets/security.png" type="Texture" id=2]
[ext_resource path="res://Scripts/FSMSecurityTrooper/Patrol.gd" type="Script" id=3]
[ext_resource path="res://Scripts/FSMSecurityTrooper/Shoot.gd" type="Script" id=4]
[ext_resource path="res://LabelSecurityTrooper.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 22.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 103, 90 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80, 50 )

[sub_resource type="Animation" id=5]
resource_name = "Aim"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[node name="SecurityTrooper" type="KinematicBody2D" groups=[
"Enemy",
]]
scale = Vector2( -1, 1 )
collision_layer = 3
collision_mask = 10
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, -4 )
texture = ExtResource( 2 )
vframes = 3
hframes = 3

[node name="bullet_shoot" type="Position2D" parent="Sprite"]
position = Vector2( 19, -8 )

[node name="Scout" type="Area2D" parent="."]
position = Vector2( -3, 0 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scout"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="Patrol " type="Area2D" parent="."]
position = Vector2( -3, 0 )
collision_layer = 2
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Patrol "]
shape = SubResource( 3 )

[node name="Melee" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee"]
shape = SubResource( 4 )

[node name="BulletTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.7
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Run"
anims/Aim = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/Shoot = SubResource( 7 )

[node name="States" type="Node" parent="."]

[node name="Patrol" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Chase" type="Node" parent="States"]

[node name="Shoot" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Melee" type="Node" parent="States"]

[node name="Upper" type="Node" parent="States"]

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = -40.0
margin_right = 56.0
margin_bottom = -26.0
rect_scale = Vector2( -1, 1 )
script = ExtResource( 5 )
[connection signal="state_changed" from="." to="Label" method="_on_SecurityTrooper_state_changed"]
[connection signal="area_entered" from="Scout" to="." method="_on_Scout_area_entered"]
[connection signal="area_entered" from="Patrol " to="States/Patrol" method="_on_Patrol__area_entered"]
[connection signal="area_entered" from="Patrol " to="States/Shoot" method="_on_Patrol__area_entered"]
[connection signal="area_exited" from="Patrol " to="States/Patrol" method="_on_Patrol__area_exited"]
[connection signal="area_exited" from="Patrol " to="States/Shoot" method="_on_Patrol__area_exited"]
[connection signal="timeout" from="BulletTimer" to="States/Shoot" method="_on_BulletTimer_timeout"]
